stream even sum